--- a/config/kustomize/base/deployment.yaml
+++ b/config/kustomize/base/deployment.yaml
@@ -22,9 +22,9 @@ spec:
         fsGroup: 1000
       containers:
       - name: hello-world
-        image: nginx:alpine
+        image: hello-world:latest
         ports:
-        - containerPort: 80
+        - containerPort: 8080
           name: http
         env:
         - name: ENVIRONMENT
@@ -38,7 +38,7 @@ spec:
               name: hello-world-config
               key: log_level
         - name: PORT
-          value: "80"
+          value: "8080"
         resources:
           requests:
             cpu: 100m
@@ -49,7 +49,7 @@ spec:
         livenessProbe:
           httpGet:
             path: /
-            port: 80
+            port: 8080
           initialDelaySeconds: 30
           periodSeconds: 10
           timeoutSeconds: 5
@@ -57,7 +57,7 @@ spec:
         readinessProbe:
           httpGet:
             path: /
-            port: 80
+            port: 8080
           initialDelaySeconds: 5
           periodSeconds: 5
           timeoutSeconds: 3
