--- a/config/kustomize/base/route.yaml
+++ b/config/kustomize/base/route.yaml
@@ -11,7 +11,7 @@ spec:
     name: hello-world
     weight: 100
   port:
-    targetPort: http
+    targetPort: 8080
   tls:
     termination: edge
     insecureEdgeTerminationPolicy: Redirect 
