--- a/config/kustomize/overlays/dev/configmap.yaml
+++ b/config/kustomize/overlays/dev/configmap.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: hello-world-config
+  name: hello-world-dev-config
   labels:
     app: hello-world
     environment: dev
