--- a/config/helm/hello-world/values.yaml
+++ b/config/helm/hello-world/values.yaml
@@ -78,11 +78,13 @@ hpa:
           periodSeconds: 15
 
 # Security configuration
-security:
+podSecurityContext:
   runAsNonRoot: true
-  runAsUser: 1000
-  runAsGroup: 1000
-  fsGroup: 1000
+  runAsUser: 1000720000
+  runAsGroup: 1000720000
+  fsGroup: 1000720000
+
+containerSecurityContext:
   allowPrivilegeEscalation: false
   readOnlyRootFilesystem: true
   capabilities:
