--- a/config/kustomize/base/deployment.yaml
+++ b/config/kustomize/base/deployment.yaml
@@ -17,9 +17,9 @@ spec:
       serviceAccountName: hello-world-sa
       securityContext:
         runAsNonRoot: true
-        runAsUser: 1000
-        runAsGroup: 1000
-        fsGroup: 1000
+        runAsUser: 1000720000
+        runAsGroup: 1000720000
+        fsGroup: 1000720000
       containers:
       - name: hello-world
         image: hello-world:latest
