--- a/argocd/applications/helm-apps/staging-helm-app.yaml
+++ b/argocd/applications/helm-apps/staging-helm-app.yaml
@@ -13,7 +13,7 @@ spec:
   source:
     repoURL: https://github.com/example/argocd-repo-server
     targetRevision: HEAD
-    chart: config/helm/hello-world
+    path: config/helm/hello-world
     helm:
       valueFiles:
       - values-staging.yaml
