--- a/argocd/applicationsets/helm-appset.yaml
+++ b/argocd/applicationsets/helm-appset.yaml
@@ -34,7 +34,7 @@ spec:
       source:
         repoURL: https://github.com/JoeyJoHa/argocd-repo-server
         targetRevision: main
-        chart: config/helm/hello-world
+        path: config/helm/hello-world
         helm:
           valueFiles:
           - '{{valuesFile}}'
