--- a/argocd/applications/helm-apps/dev-helm-app.yaml
+++ b/argocd/applications/helm-apps/dev-helm-app.yaml
@@ -12,6 +12,7 @@ spec:
   project: default
   source:
     repoURL: https://github.com/example/argocd-repo-server
+    targetRevision: 1.0.0
     path: config/helm/hello-world
     helm:
       valueFiles:
