--- a/argocd/applications/kustomize-apps/dev-app.yaml
+++ b/argocd/applications/kustomize-apps/dev-app.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: dev-hello-world
-  namespace: argocd
+  namespace: openshift-gitops
   labels:
     app.kubernetes.io/name: hello-world
     app.kubernetes.io/instance: dev
