--- a/config/helm/hello-world/values.yaml
+++ b/config/helm/hello-world/values.yaml
@@ -8,13 +8,13 @@ app:
 
 # Image configuration
 image:
-  repository: hello-world
-  tag: "latest"
+  repository: nginx
+  tag: "alpine"
   pullPolicy: IfNotPresent
 
 # Container configuration
 container:
-  port: 8080
+  port: 80
   name: hello-world
 
 # Environment configuration
@@ -44,8 +44,8 @@ resources:
 # Service configuration
 service:
   type: ClusterIP
-  port: 8080
-  targetPort: 8080
+  port: 80
+  targetPort: 80
 
 # Route configuration
 route:
@@ -85,7 +85,7 @@ healthChecks:
   livenessProbe:
     enabled: true
     path: /
-    port: 8080
+    port: 80
     initialDelaySeconds: 30
     periodSeconds: 10
     timeoutSeconds: 5
@@ -93,7 +93,7 @@ healthChecks:
   readinessProbe:
     enabled: true
     path: /
-    port: 8080
+    port: 80
     initialDelaySeconds: 5
     periodSeconds: 5
     timeoutSeconds: 3
@@ -104,7 +104,7 @@ monitoring:
   enabled: true
   prometheus:
     scrape: true
-    port: 8080
+    port: 80
     path: /metrics
 
 # Labels and annotations
@@ -118,7 +118,7 @@ annotations:
   app.kubernetes.io/version: v1.0.0
   app.kubernetes.io/managed-by: helm
   prometheus.io/scrape: "true"
-  prometheus.io/port: "8080"
+  prometheus.io/port: "80"
   prometheus.io/path: "/metrics"
 
 # Service account configuration
