--- a/config/helm/hello-world/values-prod.yaml
+++ b/config/helm/hello-world/values-prod.yaml
@@ -5,26 +5,21 @@ environment:
   debugEnabled: false
 
 deployment:
-  replicas: 3
+  replicas: 1
 
 resources:
   requests:
+    cpu: 100m
+    memory: 128Mi
+  limits:
     cpu: 500m
     memory: 512Mi
-  limits:
-    cpu: 1000m
-    memory: 1Gi
 
 hpa:
-  enabled: true
-  minReplicas: 3
-  maxReplicas: 10
-  targetCPUUtilizationPercentage: 70
-  targetMemoryUtilizationPercentage: 80
+  enabled: false
 
 route:
   enabled: true
-  host: hello-world-prod.local
 
 labels:
   environment: prod
