--- a/config/helm/hello-world/values.yaml
+++ b/config/helm/hello-world/values.yaml
@@ -27,10 +27,7 @@ environment:
 deployment:
   replicas: 1
   strategy:
-    type: RollingUpdate
-    rollingUpdate:
-      maxSurge: 25%
-      maxUnavailable: 25%
+    type: Recreate
 
 # Resource configuration
 resources:
@@ -58,23 +55,6 @@ route:
 # Horizontal Pod Autoscaler configuration
 hpa:
   enabled: false
-  minReplicas: 3
-  maxReplicas: 10
-  targetCPUUtilizationPercentage: 70
-  targetMemoryUtilizationPercentage: 80
-  behavior:
-    scaleDown:
-      stabilizationWindowSeconds: 300
-      policies:
-        - type: Percent
-          value: 10
-          periodSeconds: 60
-    scaleUp:
-      stabilizationWindowSeconds: 60
-      policies:
-        - type: Percent
-          value: 100
-          periodSeconds: 15
 
 # Security configuration
 # Note: Security context is managed by OpenShift SCCs at the namespace level
