--- a/config/kustomize/overlays/dev/configmap.yaml
+++ b/config/kustomize/overlays/dev/configmap.yaml
@@ -9,5 +9,7 @@ data:
   environment: "dev"
   log_level: "debug"
   app_name: "hello-world"
-  version: "v1.0.0"
-  debug_enabled: "true" 
+  version: "v1.1.0"
+  debug_enabled: "true"
+  deployment_method: "kustomize"
+  last_updated: "2025-07-31" 
