--- a/config/kustomize/overlays/prod/configmap.yaml
+++ b/config/kustomize/overlays/prod/configmap.yaml
@@ -9,5 +9,7 @@ data:
   environment: "prod"
   log_level: "warn"
   app_name: "hello-world"
-  version: "v1.0.0"
-  debug_enabled: "false" 
+  version: "v1.1.0"
+  debug_enabled: "false"
+  deployment_method: "kustomize"
+  last_updated: "2025-07-31" 
