--- a/config/helm/hello-world/values-prod.yaml
+++ b/config/helm/hello-world/values-prod.yaml
@@ -9,11 +9,11 @@ deployment:
 
 resources:
   requests:
-    cpu: 100m
-    memory: 128Mi
+    cpu: 200m
+    memory: 256Mi
   limits:
-    cpu: 500m
-    memory: 512Mi
+    cpu: 1000m
+    memory: 1Gi
 
 hpa:
   enabled: false
